nullaway_error_0cbbcae5-ac97-4732-b3a7-a9a28c52d1cb.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/registry/rule/LeaseExistsRule.java:35: error: [NullAway] dereferenced expression existingLease is @Nullable
                        existingLease.getHolder().getStatus().name(),
                                     ^
